# clox

./: build.bat  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  meson.build  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
builddir/: .ninja_deps  .ninja_log  build.ninja  clox  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
