project('clox', 'c')
executable('clox', ['main.c',
                    'memory.c',
                    'chunk.c',
                    'debug.c',
                    'value.c',
                    'vm.c',
                    'compiler.c',
                    'scanner.c',
                    'object.c',
                    'table.c'])